web - refactor how we poll scratchpad
